fixed changelogs